--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
             skillsLabel: { en: 'Skills (comma-separated)', ar: 'المهارات (افصل بينها بفاصلة)', fr: 'Compétences (séparées par des virgules)' },
             addLanguage: { en: '+ Add Language', ar: '+ إضافة لغة', fr: '+ Ajouter une langue' },
             step3Download: { en: '3. Download CV (PDF)', ar: '3. تحميل السيرة الذاتية (PDF)', fr: '3. Télécharger le CV (PDF)' },
-            footerText: { en: 'Developed with ❤️ - All rights reserved © 2024', ar: 'تم التطوير بحب ❤️ - جميع الحقوق محفوظة © 2024', fr: 'Développé avec ❤️ - Tous droits réservés © 2024' },
+            footerText: { en: 'Developed kaced tech - All rights reserved © 2025', ar: 'تم التطوير kaced tech - جميع الحقوق محفوظة © 2025', fr: 'Développé kaced tech- Tous droits réservés © 2025' },
             fullNamePlaceholder: { en: 'e.g., John Doe', ar: 'مثال: سارة عبدالله', fr: 'ex: Jean Dupont' },
             jobTitlePlaceholder: { en: 'e.g., Digital Marketing Manager', ar: 'مثال: مديرة تسويق رقمي', fr: 'ex: Responsable Marketing Digital' },
             addressPlaceholder: { en: 'City, Country', ar: 'المدينة، الدولة', fr: 'Ville, Pays' },
